added SOLR_OPTS variable